--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                     <p class="scan-here mt-4 mb-2">
                                         Scan Here
                                     </p>
-                                    <img class="barcode" src="assets/images/demos/demo-30/banners/banner-1.jpg" alt="Banner" width="50" height="20">
+                                    <img class="barcode" src="assets/images/barcode.png" alt="Banner" width="50" height="20">
 
                                 </div>
                             </div>
